--- a/.github/workflows/ossrh-release.yml
+++ b/.github/workflows/ossrh-release.yml
@@ -1,9 +1,6 @@
 name: "OSSRH Release"
 run-name: OSSRH Release [${{ github.ref_name }}]
 on:
-  push:
-    tags:
-      - '*-SNAPSHOT'
   workflow_dispatch:
 jobs:
   release:
@@ -21,11 +18,12 @@ jobs:
           java-version: '17'
           check-latest: true
           server-id: 'ossrh'
-          server-username: OSSRH_USERNAME
-          server-password: OSSRH_PASSWORD
+          server-username: 'OSSRH_USERNAME'
+          server-password: 'OSSRH_PASSWORD'
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
-          gpg-passphrase: GPG_PRIVATE_KEY_PASSPHRASE
+          gpg-passphrase: 'GPG_PRIVATE_KEY_PASSPHRASE'
           cache: 'maven'
+
       - name: Run Tests
         run: |
           mvn test
@@ -35,6 +33,5 @@ jobs:
           mvn -U -B clean deploy -P release
         env:
           GPG_PRIVATE_KEY_PASSPHRASE: ${{ secrets.GPG_PRIVATE_KEY_PASSPHRASE }}
-          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
           OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
